<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutVista"
    android:background="@drawable/borde">

    <TextView
        android:id="@+id/vistaNombre"
        style="@style/camposVista"
        android:text="@string/vistaNombre" />

    <TextView
        android:id="@+id/vistaFecha"
        style="@style/camposVista"
        android:layout_below="@id/vistaNombre"
        android:text="@string/vistaFecha" />

    <TextView
        android:id="@+id/vistaNota"
        style="@style/camposVista"
        android:layout_below="@id/vistaFecha"
        android:text="@string/vistaNota" />

    <TextView
        android:id="@+id/vistaCalificacion"
        style="@style/camposVista"
        android:layout_below="@id/vistaNota"
        android:text="@string/vistaCalificacion" />

</RelativeLayout>