<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutVista"
    android:background="@drawable/borde">

    <TextView
        android:id="@+id/vistaNombre"
        style="@style/camposVista"
        android:text="@string/vistaNombre" />

    <TextView
        android:id="@+id/vistaLibro"
        style="@style/camposVista"
        android:layout_below="@id/vistaNombre"
        android:text="@string/vistaDNI" />

    <TextView
        android:id="@+id/vistaProfesor"
        style="@style/camposVista"
        android:layout_below="@id/vistaLibro"
        android:text="@string/vistaEdad" />

    <TextView
        android:id="@+id/vistaObligatoria"
        style="@style/camposVista"
        android:layout_below="@id/vistaProfesor"
        android:text="@string/vistaCategoria" />

</RelativeLayout>