<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutVista"
    android:background="@drawable/borde"
    >

    <LinearLayout
        android:id="@+id/horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vistaNombre"
                style="@style/camposVista"
                android:text="@string/vistaNombre" />

            <TextView
                android:id="@+id/vistaDNI"
                style="@style/camposVista"
                android:text="@string/vistaDNI" />

            <TextView
                android:id="@+id/vistaCurso"
                style="@style/camposVista"
                android:text="@string/vistaCurso" />

            <TextView
                android:id="@+id/vistaEdad"
                style="@style/camposVista"
                android:text="@string/vistaEdad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="311dp"
            android:layout_marginRight="311dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/vistaVer"
                style="@style/botones"
                android:text="@string/vistaVer"
                app:layout_constraintStart_toEndOf="@+id/vistaNombre"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>