<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/borde"
        android:padding="@dimen/padding_horizontal"
        android:paddingLeft="@dimen/padding_horizontal"
        android:paddingTop="@dimen/padding_horizontal"
        android:paddingRight="@dimen/padding_horizontal"
        android:paddingBottom="@dimen/padding_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        style="@style/cuerpo.main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecera">

        <Button
            android:id="@+id/botAlumnosMain"
            style="@style/botones"
            android:onClick="verAlumnos"
            android:text="@string/botAlumnosMain" />

        <Button
            android:id="@+id/botProfesoresMain"
            style="@style/botones"
            android:onClick="verProfesores"
            android:text="@string/botProfesoresMain" />

        <Button
            android:id="@+id/botAsignaturasMain"
            style="@style/botones"
            android:onClick="verAsignaturas"
            android:text="@string/botAsignaturasMain" />

        <Button
            android:id="@+id/botMatricularMain"
            style="@style/botones"
            android:onClick="matricular"
            android:text="@string/botMatricularMain" />

        <Button
            android:id="@+id/botExaminarMain"
            style="@style/botones"
            android:onClick="examinar"
            android:text="@string/botExaminarMain" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>