<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/usuario"
            style="@style/camposInsert"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insertUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            style="@style/camposInsert"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insertPass"
            android:inputType="numberPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert">

        <Button
            android:id="@+id/iniciar"
            style="@style/botones"
            android:onClick="inicia"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/primeraVez"
            style="@style/botones"
            android:onClick="primera"
            android:text="@string/Bprimera" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>